--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~7.2.0",
     "ag-grid-angular": "^20.1.0",
     "ag-grid-community": "^20.1.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
