--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,9 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  
+  "start": "ng serve --proxy-config proxy.js",
+
   "dependencies": {
     "@angular/animations": "~7.2.0",
     "@angular/common": "~7.2.0",
